--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ h3 {
     color: rgb(255, 255, 255);
     background-color: coral;
     height: 3rem;
-    font-family: "poppins";
+    font-family: "poppins",Arial, Helvetica, sans-serif;
     margin-left: 30px;
     font-size: 18px;
 }
